--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "4.3.1",
     "mocha": "8.3.0",
-    "nock": "^13.0.10"
+    "nock": "13.0.10"
   },
   "dependencies": {
-    "axios": "^0.21.1",
-    "google-auth-library": "^7.0.2"
+    "axios": "0.21.1",
+    "google-auth-library": "7.0.2"
   }
 }
