--- a/package.json
+++ b/package.json
@@ -24,6 +24,11 @@
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "4.3.1",
-    "mocha": "8.3.0"
+    "mocha": "8.3.0",
+    "nock": "13.0.10"
+  },
+  "dependencies": {
+    "axios": "0.21.1",
+    "google-auth-library": "7.0.2"
   }
 }
