--- a/.github/worfklows/update-dist.yml
+++ b/.github/worfklows/update-dist.yml
@@ -1,7 +1,8 @@
-on: 
+on:
+  pull_request:
+    branches: master
   push:
-    branches:
-      - master
+    branches: master
 jobs:
   build:
     runs-on: ubuntu-latest
