--- a/.github/worfklows/update-dist.yml
+++ b/.github/worfklows/update-dist.yml
@@ -8,14 +8,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-      with: 
-        ref: master
+    - name: Install dependencies
+      run: npm ci --production
     - name: Update dist
+      run: npm run build
+    - name: Commit dist
       run: |
-        npm ci --production
-        npm run build
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
         git add dist/index.js
-        git commit -m "chore: publish dist" || echo "nothing to commit"
+        git commit -m "chore: publish dist" || echo "Nothing to commit"
         git push origin master
