--- a/.github/workflows/update-dist.yml
+++ b/.github/workflows/update-dist.yml
@@ -17,7 +17,7 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-node-
     - name: Install dependencies
-      run: npm ci --production
+      run: npm ci
     - name: Update dist
       run: npm run build
     - uses: stefanzweifel/git-auto-commit-action@v4
