--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "4.3.1",
     "mocha": "8.3.0",
-    "nock": "13.0.10"
+    "nock": "13.0.10",
+    "sinon": "9.2.4"
   },
   "dependencies": {
     "@actions/core": "1.2.6",
