Expose app_manifest for configuration (#17)

--- a/action.yml
+++ b/action.yml
@@ -24,6 +24,10 @@ inputs:
     description: Default CI URL prefix, used to create the CI build URL in the Harbormaster package 
     required: false
     default: https://app.circleci.com/pipelines/github/
+  app_manifest:
+    description: Application deployment configuration for SONAR consumption
+    required: false
+    default: .scoop/app.yaml
 runs:
   using: node12
   main: dist/index.js
