--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@vercel/ncc": "0.27.0",
     "chai": "4.3.3",
+    "chai-as-promised": "7.1.1",
     "eslint": "7.21.0",
     "eslint-config-standard": "16.0.2",
     "eslint-plugin-import": "2.22.1",
